# b401

./: .env.example  001-connect-llm.py  002-trying-different-llm-models.py  003-prompt-templates.py  004-chains.py  005-output-parsers.py  pyproject.toml  zzz-nb001-connect-llm.ipynb  zzz-nb002-trying-different-llm-models.ipynb
.ipynb_checkpoints/: zzz-nb001-191-connect-llms-checkpoint.ipynb  zzz-nb001-connect-llm-checkpoint.ipynb  zzz-nb002-trying-different-llm-models-checkpoint.ipynb  zzz-nb003-prompt-templates-checkpoint.ipynb  zzz-nb004-chains-checkpoint.ipynb  zzz-nb005-output-parsers-checkpoint.ipynb  zzz-nb191-connect-llms-checkpoint.ipynb
